--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    background-attachment: fixed; 
 }
 .container {
     width: 300px;
@@ -33,7 +34,7 @@ input[type="text"], input[type="email"], input[type="password"], select {
 }
 button {
     width: 100%;
-    padding: 10px;
+    padding: 10px 15px;
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -46,3 +47,11 @@ button:hover {
 .report-upload {
     display: none;
 }
+/* style.css */
+footer {
+    background-color: blue;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
